test/frontend/pass/nested_functions.osl
struct Pair { int i, j; };

int f(int x[3]) {
    int i = x[0];
    Pair g(int j) { return Pair(i, j); }
    return g(x[0]).i;
}

shader foo(output int x = 3) {
    x = f({ 1, 2, 3});
}
