test/frontend/fail/non_indexable_expression.osl
int f(int i) { return i; }
shader foo() {
    int i;
    f(i[2]);
}
